--- a/src/app/entrepreneur/entrepreneur.page.scss
+++ b/src/app/entrepreneur/entrepreneur.page.scss
@@ -20,16 +20,20 @@
 }
 .cardProjectContent{
 	height: 160px;
+	.defaultLogo{
+		font-size: 6em;
+	}
+	.projectLogo{
+		max-height: -webkit-fill-available;
+	}
 }
 .cardProjectContent:hover{
 	background: var(--ion-color-light);
 	cursor: pointer;
+
 }   
 
 .cardfooter{
 	border-top:1px solid var(--ion-color-light);
 }
 
-.defaultLogo{
-	font-size: 6em;
-}
