--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -266,3 +266,8 @@ ion-auto-complete ul{
 .select-popover{
   --width:auto !important;
 }
+
+.selectAlertClass{
+  --min-width:343px;
+  --max-width:none;
+}
