--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,27 @@
 <ion-app *ngIf="isUserLogged ===true">
+	<ion-split-pane contentId="main-content" when="(min-width: 2500px)" class="sideMenu">
+		<ion-menu contentId="main-content" type="push"  menuId="mainMenu" (click)="toggle()" >
+			<ion-content>
+				<ion-list >
+					<ion-item *ngFor="let p of pages; let i = index" (click)="selectedIndex = i" routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" [class.selected]="selectedIndex == i">
+						<ion-icon color="primary" slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
+						<ion-label> {{p.title}}</ion-label>
+					</ion-item>		
+					<ion-item href="https://www.facebook.com/groups/entrepreneurstudio" target="_blank" lines="none" detail="false">
+						<ion-icon color="primary" slot="start" ios="chatbubbles-outline" md="people-circle-sharp"></ion-icon>
+						<ion-label>Systeme D</ion-label>
+					</ion-item>	
+				</ion-list> 
 
-  <ion-router-outlet id="main-content"></ion-router-outlet>
+				<ion-item lines="none" class="removeButton fullWidth" *ngIf="projectRoute === true">
+					<ion-button expand="block" fill="outline" color="danger" class="fullWidth" (click)="requestRemoveProject()">{{'PROJECT.Remove' | translate }}</ion-button>
+				</ion-item>
+			</ion-content>
+		</ion-menu>
+		<ion-router-outlet id="main-content"></ion-router-outlet>
+	</ion-split-pane>
 </ion-app>
 
 <ion-app *ngIf="isUserLogged ===false" >
-  <ion-router-outlet id="main-content"></ion-router-outlet>
+	<ion-router-outlet id="main-content"></ion-router-outlet>
 </ion-app>
