--- a/src/app/landing-page/landing-page.page.scss
+++ b/src/app/landing-page/landing-page.page.scss
@@ -35,6 +35,7 @@ span:after {
 	}
 	@media(max-width: 800px) {
 		height: auto;
+		padding-top: 20px;
 		h1{
 			font-size:1.5em;
 		}
@@ -65,6 +66,11 @@ span:after {
 	margin-left: auto;
 	margin-right: auto;
 	font-size:3em;
+	@media(max-width: 800px) {
+		margin-top:16px;
+		text-align: justify!important;
+		font-size:1.5em;
+	}
 
 }
 .journey{
@@ -107,6 +113,9 @@ span:after {
 		font-size:3em;
 		margin-bottom:0.2em;
 	}
+	ion-col{
+		min-width: 200px;
+	}
 }
 
 .beta{
@@ -137,7 +146,7 @@ span:after {
 	h2{
 		font-size: 2.5em;
 		position: absolute;
-		bottom: 100px;
+		bottom: 218px;
 		width:100%;
 		color:var(--ion-color-primary-contrast);
 	}
@@ -147,6 +156,7 @@ span:after {
 		}
 	}
 	.subContentImg{
+		min-width:250px;
 		min-height: 250px;
 		width: auto;
 		display: block;
@@ -190,3 +200,38 @@ span:after {
 }
 
 
+
+
+.overlay {
+  position: absolute;
+  bottom: 100%;
+  left: 0;
+  right: 0;
+  background-color:var(--ion-color-primary);
+  overflow: hidden;
+  width: 100%;
+  height:0;
+  transition: .5s ease;
+  cursor:pointer;
+  .button{
+  	--border-color: var(--ion-color-primary-contrast);
+    color: var(--ion-color-primary-contrast);
+  }
+}
+
+.subContentImg:hover .overlay {
+  bottom: 0;
+  height: 100%;
+}
+
+.text {
+  color: white;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
