--- a/src/app/project/executive/summary/popover-business-canvas-element/popover-business-canvas-element.component.html
+++ b/src/app/project/executive/summary/popover-business-canvas-element/popover-business-canvas-element.component.html
@@ -1,4 +1,7 @@
 <ion-content class="ion-padding">
+	<ion-item lines="none">
+		<ion-icon color="primary" slot="end" name="close-outline" class="pointer" (click)="dismiss()"></ion-icon>
+	</ion-item>
 	<ion-grid>
 		<ion-row>
 			<ion-col>
@@ -9,9 +12,10 @@
 				</ion-item>
 				<ion-text>
 					<h2>
-						<ion-icon name="chatbubble-ellipses-outline" class="ion-margin-end">
-						
-					</ion-icon>Comments</h2></ion-text>
+						<ion-icon name="chatbubble-ellipses-outline" class="ion-margin-end"></ion-icon>
+						<ion-text>Comments</ion-text>
+					</h2>
+				</ion-text>
 
 			</ion-col>
 			<ion-col class="ion-margin-start ion-padding" size="3">
@@ -22,5 +26,5 @@
 
 		</ion-row>
 	</ion-grid>
-	
+
 </ion-content>
