--- a/src/app/project/project.page.html
+++ b/src/app/project/project.page.html
@@ -1,18 +1,19 @@
-<app-header></app-header>
+<ion-header [translucent]="true" >
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button autoHide="true" >
+      </ion-menu-button>
+    </ion-buttons>
+    <ion-title  class="headerTitle"> 
+      <img  [src]="project.summary.logoUrl" *ngIf="project.summary.logoUrl !==''" class=" logo ion-margin-end cursor"  (click)="openPopover('projectSummary')"/>
+      <ion-icon class="cursor" slot="start" name="cube-outline" *ngIf="project.summary.logoUrl ===''" (click)="openPopover('projectSummary')"></ion-icon>
+      <ion-text  class="cursor" (click)="openPopover('projectSummary')">{{project.summary.name}}</ion-text>
+      <ion-icon class="ion-margin-start cursor" name="pencil-outline"  (click)="openPopover('projectSummary')"></ion-icon>
+    </ion-title>
+    <app-user-avatar slot="end"></app-user-avatar>
 
-  <ion-content>
-    <ion-split-pane contentId="project-content" when="(min-width: 2500px)" class="sideMenu">
-     <ion-menu contentId="project-content" type="push"  >
-      <ion-content>
-        <ion-list >
-         <ion-item *ngFor="let p of pages; let i = index" (click)="selectedIndex = i" routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" [class.selected]="selectedIndex == i">
-          <ion-icon color="primary" slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
-          <ion-label> {{p.title}}</ion-label>
-        </ion-item>		
-      </ion-list>
-      
-    </ion-content>
-  </ion-menu>
+  </ion-toolbar>
+</ion-header>     
+<ion-content>
   <ion-router-outlet id="project-content"></ion-router-outlet>
-</ion-split-pane>
 </ion-content>
