--- a/src/app/on-boarding/on-boarding.page.html
+++ b/src/app/on-boarding/on-boarding.page.html
@@ -1,90 +1,139 @@
 
-<ion-content class="ion-padding" *ngIf="step===0">
-	
-	<div class="ion-text-center ion-padding"><img src="./assets/images/undraw_joyride_hnno.svg" class="welcomePicture"></div>
-	<ion-text class="ion-text-center ion-padding title"><h1>{{'ONBOARDINGPAGE.Title' | translate}}</h1></ion-text>
-	<h2 class="ion-text-uppercase">{{'ONBOARDINGPAGE.SubTitle' | translate}}</h2>
-	<ion-item>
-		<ion-label color="primary" position="floating">{{'ONBOARDINGPAGE.CurrentSituation' | translate}}</ion-label>
-		<ion-select interface="popover" [(ngModel)] ="user.profile.currentSituation" >
-			<ion-select-option *ngFor="let item of currentSituationItems" [value]="item.id">{{item.text}}</ion-select-option>
-		</ion-select>
+<ion-content class="ion-padding">
+	<ion-item lines="none" *ngIf="stepPage===1">
+		<ion-icon color="primary" slot="end" name="close-outline" class="pointer" (click)="dismiss()"></ion-icon>
 	</ion-item>
-	<ion-item>
-		<ion-label  color="primary" position="floating">{{'ONBOARDINGPAGE.Experience' | translate}}</ion-label>
-		<ion-select  interface="popover" [(ngModel)] ="user.profile.experience" >
-			<ion-select-option *ngFor="let item of experienceItems" [value]="item.id">{{item.text}}</ion-select-option>
-		</ion-select>
-	</ion-item>
-	<ion-item>
-		<ion-label color="primary" position="floating">{{'ONBOARDINGPAGE.Motivation' | translate}}</ion-label>
-		<ion-select interface="popover" [(ngModel)] ="user.profile.personalMotivation" >
-			<ion-select-option *ngFor="let item of personalMotivationItems" [value]="item.id">{{item.text}}</ion-select-option>
-		</ion-select>
-	</ion-item>
-	<div class="ion-margin-top ion-margin-bottom ion-text-center">
-		<ion-button color="primary" (click)="nextStep()">{{'ONBOARDINGPAGE.CreateProjectButton' | translate}}</ion-button>
-	</div>
-</ion-content>
-<ion-content class="ion-padding"  *ngIf="step===1">
-	<div class="ion-text-center ion-padding"><img src="./assets/images/undraw_runner_start_x0uu.svg" class="welcomePicture"></div>
-	<h2 class="ion-text-uppercase">{{'ONBOARDINGPAGE.SubTitleStep1' | translate}}</h2>
-	<ion-item>
-		<ion-label color="primary" position="floating">{{'ONBOARDINGPAGE.ProjectName' | translate}}</ion-label>
-		<ion-input type="text"  [(ngModel)] ="project.summary.name" ></ion-input>
-	</ion-item>
-	<ion-item lines="none">
-		<ion-label color="primary" position="stacked">{{'ONBOARDINGPAGE.ProjectDomains' | translate}}</ion-label>
-	</ion-item>
-	<ion-item>
-		<ion-auto-complete [(model)]="project.domains"
-		[multi]="true"
-		[dataProvider]="providerDomains"
-		[exclude]="otherDomain"
-		[options]="domainOptions"
-		[removeButtonIcon]="'assets/icons/clear.svg'"
-		[removeButtonColor]="'dark'"
-		[useIonInput]="true"
-		></ion-auto-complete>
-	</ion-item>
-	<ion-item>
-		<ion-label color="primary" position="floating">{{'ONBOARDINGPAGE.ProjectMaturity' | translate}}</ion-label>
-		<ion-select   [interfaceOptions]="customPopoverOptions" interface="popover" [(ngModel)] ="project.maturity" >
-			<ion-select-option *ngFor="let item of projectMaturityItems" [value]="item.id">{{item.text}}</ion-select-option>
-		</ion-select>
-	</ion-item>
+	<ion-slides  #slides pager="true" [options]="slideOpts" class="onboardingSlides">
+		<ion-slide *ngIf="stepPage===0">
+			<div class="ion-margin-top ion-margin-bottom fullWidth">
+				<div class="ion-text-center ">
+					<img src="./assets/images/undraw_joyride_hnno.svg" class="welcomePicture">
+				</div>
+				<ion-text class="ion-text-center ion-padding title"><h1>{{'ONBOARDINGPAGE.Title' | translate}}</h1></ion-text>
+				<h2 class="ion-text-uppercase">{{'ONBOARDINGPAGE.SubTitle' | translate}}</h2>
+				<ion-item>
+					<ion-label color="primary" position="floating">{{'ONBOARDINGPAGE.CurrentSituation' | translate}}</ion-label>
+					<ion-select interface="action-sheet" [(ngModel)] ="user.profile.currentSituation" >
+						<ion-select-option *ngFor="let item of currentSituationItems" [value]="item.index">{{item.text}}</ion-select-option>
+					</ion-select>
+				</ion-item>
+				<ion-item>
+					<ion-label  color="primary" position="floating">{{'ONBOARDINGPAGE.Experience' | translate}}</ion-label>
+					<ion-select  interface="action-sheet" [(ngModel)] ="user.profile.experience" >
+						<ion-select-option *ngFor="let item of experienceItems" [value]="item.index">{{item.text}}</ion-select-option>
+					</ion-select>
+				</ion-item>
+				<ion-item>
+					<ion-label color="primary" position="floating">{{'ONBOARDINGPAGE.Motivation' | translate}}</ion-label>
+					<ion-select interface="action-sheet" [(ngModel)] ="user.profile.personalMotivation" >
+						<ion-select-option *ngFor="let item of personalMotivationItems" [value]="item.index">{{item.text}}</ion-select-option>
+					</ion-select>
+				</ion-item>
+				<div class="ion-margin-top ion-margin-bottom ion-text-center">
+					<ion-button color="primary" (click)="nextStep()">{{'ONBOARDINGPAGE.CreateProjectButton' | translate}}</ion-button>
+				</div>
+			</div>
+			
+		</ion-slide>
+		<ion-slide>
+			<div class="ion-margin-top ion-margin-bottom fullWidth">
+				<div class="ion-text-center "><img src="./assets/images/undraw_runner_start_x0uu.svg" class="welcomePicture"></div>
+				<h2 class="ion-text-uppercase">{{'ONBOARDINGPAGE.SubTitleStep1' | translate}}</h2>
+				<ion-item>
+					<ion-label color="primary" position="floating">{{'ONBOARDINGPAGE.ProjectName' | translate}}</ion-label>
+					<ion-input type="text"  [(ngModel)] ="project.summary.name" ></ion-input>
+				</ion-item>
+				<ion-item lines="none">
+					<ion-label color="primary" position="stacked">{{'ONBOARDINGPAGE.ProjectDomains' | translate}}</ion-label>
+				</ion-item>
+				<ion-item>
+					<ion-auto-complete [(model)]="project.domains"
+					[multi]="true"
+					[dataProvider]="providerDomains"
+					[exclude]="otherDomain"
+					[options]="domainOptions"
+					[removeButtonIcon]="'assets/icons/clear.svg'"
+					[removeButtonColor]="'dark'"
+					[useIonInput]="true"
+					></ion-auto-complete>
+				</ion-item>
+				<ion-item>
+					<ion-label color="primary" position="floating">{{'ONBOARDINGPAGE.ProjectMaturity' | translate}}</ion-label>
+					<ion-select  multiple="true" [interfaceOptions]="customPopoverOptions"  [(ngModel)] ="project.maturity" >
+						<ion-select-option *ngFor="let item of projectMaturityItems" [value]="item.index">{{item.text}}</ion-select-option>
+					</ion-select>
+				</ion-item>
 
-	
-	<div class="ion-margin-top ion-margin-bottom ion-text-center">
-		<ion-button color="primary" (click)="nextStep()">{{'ONBOARDINGPAGE.StartNewProjectButton1' | translate}}</ion-button>
-	</div>
-</ion-content>
-<ion-content class="ion-padding"  *ngIf="step===2">
-	<div class="ion-text-center ion-padding"><img src="./assets/images/undraw_good_team_m7uu.svg" class="welcomePicture"></div>
-	<h2 class="ion-text-uppercase">{{'ONBOARDINGPAGE.SubTitleStep2' | translate}}</h2>
-	<ion-item>
-		<ion-label color="primary" position="floating">{{'ONBOARDINGPAGE.ProjectTeam' | translate}}</ion-label>
-		<ion-select interface="popover" [(ngModel)] ="project.team.type" >
-			<ion-select-option *ngFor="let item of projectTeamItems" [value]="item.id">{{item.text}}</ion-select-option>
-		</ion-select>
-	</ion-item>
-	<ion-item>
-		<ion-label color="primary" position="floating">{{'ONBOARDINGPAGE.ProjectTeamProfile' | translate}}</ion-label>
-		<ion-select  interface="popover" [(ngModel)] ="project.team.profile" >
-			<ion-select-option *ngFor="let item of projectTeamProfileItems" [value]="item.id">{{item.text}}</ion-select-option>
-		</ion-select>
-	</ion-item>
-	<ion-item>
-		<ion-label color="primary" position="floating">{{'ONBOARDINGPAGE.AssociateNumber' | translate}}</ion-label>
-		<ion-input type="number"  [(ngModel)] ="project.team.initialAssociatesNumber" ></ion-input>
-	</ion-item>
-	<ion-item>
-		<ion-label color="primary" position="floating">{{'ONBOARDINGPAGE.FinancialResources' | translate}}</ion-label>
-		<ion-select  interface="popover" [(ngModel)] ="project.financialResources.initialFinancialResources" >
-			<ion-select-option *ngFor="let item of financialResourcesItems" [value]="item.id">{{item.text}}</ion-select-option>
-		</ion-select>
-	</ion-item>	
-	<div class="ion-margin-top ion-margin-bottom ion-text-center">
-		<ion-button color="primary" (click)="startNewProject()">{{'ONBOARDINGPAGE.StartNewProjectButton2' | translate}}</ion-button>
-	</div>
-</ion-content>
+
+				<div class="ion-margin-top ion-margin-bottom ion-text-center">
+					<ion-button color="primary" (click)="nextStep()">{{'ONBOARDINGPAGE.StartNewProjectButton1' | translate}}</ion-button>
+				</div>
+			</div>
+		</ion-slide>
+		<ion-slide>
+			<div  class="ion-margin-top ion-margin-bottom fullWidth">
+				<div class="ion-text-center ">
+					<img src="./assets/images/undraw_good_team_m7uu.svg" class="welcomePicture"></div>
+					<h2 class="ion-text-uppercase">{{'ONBOARDINGPAGE.SubTitleStep2' | translate}}</h2>
+
+					<h3 class="ion-text-left">Votre equipe</h3>
+					<ion-grid class="teamMembers">
+						<ion-row>
+							<ion-col *ngFor="let teamMember of teamMembers, let index = index" class="teamMemberCol">
+								<ion-card class="teamMember">
+									<ion-card-content *ngIf="index===0">
+										<ion-item lines="none">
+											<img slot="start" *ngIf="user.photoUrl !==null" [src]="user.photoUrl" class="avatar ion-margin-end" >
+											<ion-text >{{user.firstName}} {{user.lastName}}</ion-text>
+										</ion-item>
+										<ion-item lines="none">
+											<ion-select  interface="action-sheet"  placeholder="Role" [(ngModel)] ="teamMembers[0].role" >
+												<ion-select-option *ngFor="let item of roleItems" [value]="item.index">{{item.text}}</ion-select-option>
+											</ion-select>
+										</ion-item>
+										<ion-item lines="none">
+											<ion-select placeholder="{{'TEAM.TeamMember.Profile' | translate }}" [(ngModel)] ="teamMembers[0].projectProfile"  multiple="true">
+												<ion-select-option  *ngFor="let item of projectProfilesItems" [value]="item.index">{{item.text}}</ion-select-option>
+											</ion-select>
+										</ion-item>
+										<ion-item >
+											<ion-label position="floating">{{'TEAM.TeamMember.Mission' | translate }}</ion-label>
+											<ion-textarea [(ngModel)] ="teamMember.mission" class="fullWidth" ></ion-textarea>
+										</ion-item>
+									</ion-card-content>
+									<ion-card-content *ngIf="index!==0">
+										<ion-item lines="none">
+											<ion-text >Associé {{index}}</ion-text>
+											<ion-icon slot="end" name="remove-circle-outline" (click)="removeTeamMember(index)"></ion-icon>
+										</ion-item>
+
+										<ion-input type="email" class="input" placeholder="email" [(ngModel)]="teamMember.email" ></ion-input>
+										<ion-select  interface="action-sheet"  placeholder="Role" [(ngModel)] ="teamMember.role" >
+											<ion-select-option *ngFor="let item of roleItems" [value]="item.index">{{item.text}}</ion-select-option>
+										</ion-select>
+									</ion-card-content>
+								</ion-card>
+							</ion-col>
+						</ion-row>
+					</ion-grid>
+					<div class="ion-text-left">
+						<ion-button color="primary" fill="outline" class="ion-text-left"(click)="requestAddTeamMember()">{{'ONBOARDINGPAGE.AddTeamMember' | translate}}</ion-button>
+
+					</div>
+
+
+					<ion-item>
+						<ion-label color="primary" position="floating">{{'ONBOARDINGPAGE.FinancialResources' | translate}}</ion-label>
+						<ion-select  interface="popover" [(ngModel)] ="project.financialResources.initialFinancialResources" >
+							<ion-select-option *ngFor="let item of financialResourcesItems" [value]="item.index">{{item.text}}</ion-select-option>
+						</ion-select>
+					</ion-item>	
+					<div class="ion-margin-top ion-margin-bottom ion-text-center">
+						<ion-button color="primary" (click)="startNewProject()">{{'ONBOARDINGPAGE.StartNewProjectButton2' | translate}}</ion-button>
+					</div>
+				</div>
+			</ion-slide>
+		</ion-slides>
+
+
+	</ion-content>
