--- a/src/app/project/executive/team/team.page.scss
+++ b/src/app/project/executive/team/team.page.scss
@@ -9,6 +9,8 @@
 	min-width:300px;
 	min-height:360px;
 	text-align: center;
+	margin-left: auto;
+	margin-right: auto;
 	.avatar{
 		text-align: center;
 		margin-left:auto;
